--- a/InMemoryCaching/Application/InMemoryCaching.Services/InMemoryCaching.Services.csproj
+++ b/InMemoryCaching/Application/InMemoryCaching.Services/InMemoryCaching.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Domain\InMemoryCaching.Domain\InMemoryCaching.Domain.csproj" />
   </ItemGroup>
 
